Fix up / clean up timeshifting for bwctl in fds.

--- a/drupal/themes/ecenter/css/style.css.less
+++ b/drupal/themes/ecenter/css/style.css.less
@@ -1196,6 +1196,14 @@ form {
           .box;
           position: relative;
         }
+        #fds-submit, #ads-submit {
+          position: relative;
+          z-index: 10;
+        }
+        #fds-type-wrapper {
+          position: relative;
+          z-index: 10;
+        }
         #fds-settings-wrapper {
           margin-right: 35px;
           width: 400px;
